<?xml version="1.0"?>
<package format="2">
  <name>rs007n_ros_pkg</name>
  <version>0.0.0</version>
  <description>The rs007n_ros_pkg package</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rs007n_source_samples</depend>
  <export>
  </export>
</package>
